compiler/fir/analysis-tests/testData/resolve/properties/javaAccessorConversion.fir.txt
FILE: main.kt
    public final fun test_1(x: R|A|): R|kotlin/Unit| {
        lkonst str1: R|kotlin/String!| = R|<local>/x|.R|/A.vmParameters|
        lkonst str2: <ERROR TYPE REF: Unresolved name: vMParameters> = R|<local>/x|.<Unresolved name: vMParameters>#
    }
    public final fun test_2(x: R|B|): R|kotlin/Unit| {
        lkonst int: R|kotlin/Int!| = R|<local>/x|.R|/B.vmParameters|
        lkonst error: <ERROR TYPE REF: Unresolved name: vMParameters> = R|<local>/x|.<Unresolved name: vMParameters>#
    }
    public final fun test_3(x: R|C|): R|kotlin/Unit| {
        lkonst error: <ERROR TYPE REF: Ambiguity: vmParameters, [/C.vmParameters, /C.vmParameters]> = R|<local>/x|.<Ambiguity: vmParameters, [/C.vmParameters, /C.vmParameters]>#
        lkonst int: <ERROR TYPE REF: Unresolved name: vMParameters> = R|<local>/x|.<Unresolved name: vMParameters>#
    }
    public final class Foo : R|kotlin/Any| {
        public constructor(): R|Foo| {
            super<R|kotlin/Any|>()
        }

        public final fun getX(): R|kotlin/Int| {
            ^getX Int(1)
        }

    }
    public final fun test_4(foo: R|Foo|): R|kotlin/Unit| {
        R|<local>/foo|.<Unresolved name: x>#
    }
    public final fun test_5(x: R|D|): R|kotlin/Unit| {
        R|<local>/x|.R|/D.isGood|
    }
